[gd_scene load_steps=3 format=3 uid="uid://rhythmgamescene"]

[ext_resource type="Script" path="res://scripts/RhythmGame.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/textures/games/rhythm/bg_rhythm_1080x1920.png" id="2_bg"]

[node name="RhythmGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundFallback" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.95, 0.9, 1, 1)

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="GameContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="GameContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(56, 56)
text = "<"

[node name="ObjectiveLabel" type="Label" parent="GameContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 3
clip_text = true
theme_type_variation = &"HeaderSmall"
text = ""
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(110, 0)
size_flags_horizontal = 0
horizontal_alignment = 2
theme_type_variation = &"HeaderSmall"
text = ""
vertical_alignment = 1

[node name="WayangMascot" type="AnimatedSprite2D" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(60, 60)

[node name="GameContent" type="Control" parent="GameContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Background"

[node name="ResultLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.8, 1)
theme_override_font_sizes/font_size = 32
text = "Kamu dapat X/Y beat!"
horizontal_alignment = 1
vertical_alignment = 1
